# medi-backend

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml
src/: main.rs  schema.rs
src/models/: user_accounts.rs
src/models/api/: calendar.rs  journal.rs  login.rs  mod.rs  modify_user.rs  signup.rs  today.rs  treatment.rs  user.rs
src/models/database/: caretaker.rs  concentration.rs  dosage.rs  feeling.rs  journal_entry.rs  mod.rs  take_log.rs  take_time.rs  time_preference.rs  treatment.rs  unit.rs  user_account.rs  user_accounts.rs  user_info.rs
src/routes/: auth.rs  calendar.rs  journal.rs  mod.rs  today.rs  treatments.rs  users.rs
src/utils/: mod.rs
src/utils/jwt/: apikey.rs  claim.rs  jwt.rs  mod.rs
testing/: calendar.yml  multi.yml  today.yml  treatments.yml
testing/results/today/: 1CPU 128MB.txt  2CPU 2GB.txt  2CPU 4GB.txt  4CPU 4GB.txt  4CPU 8GB.txt
